Fix notstarted contrast issue

--- a/_sass/layouts/_reporting_status.scss
+++ b/_sass/layouts/_reporting_status.scss
@@ -37,7 +37,7 @@
         text-align: center;
         &.notstarted{
           border: 1px solid #333333;
-          color: black;
+          color: #757575;
         }
         &.complete, &.inprogress{
           color: white;
